// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberedStep applies isActive prop correctly 1`] = `
<StyledNumberStep
  $isActive={true}
  $isCompleted={false}
>
  <StyledNumberIcon
    $isActive={true}
    $isCompleted={false}
  >
    <span />
  </StyledNumberIcon>
  <StyledNumberContentTail
    $isActive={true}
    $isCompleted={false}
  />
  <StyledContent
    $isActive={true}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={true}
      $isCompleted={false}
    />
    <StyledContentDescription />
  </StyledContent>
</StyledNumberStep>
`;

exports[`NumberedStep applies isCompleted prop correctly 1`] = `
<StyledNumberStep
  $isActive={false}
  $isCompleted={true}
>
  <StyledNumberIcon
    $isActive={false}
    $isCompleted={true}
  >
    <Check
      size={12}
    />
  </StyledNumberIcon>
  <StyledNumberContentTail
    $isActive={false}
    $isCompleted={true}
  />
  <StyledContent
    $isActive={false}
    $isCompleted={true}
  >
    <StyledContentTitle
      $isActive={false}
      $isCompleted={true}
    />
    <StyledContentDescription />
  </StyledContent>
</StyledNumberStep>
`;

exports[`NumberedStep applies isLast prop correctly 1`] = `
<StyledNumberStep
  $isActive={false}
  $isCompleted={false}
>
  <StyledNumberIcon
    $isActive={false}
    $isCompleted={false}
  >
    <span />
  </StyledNumberIcon>
  <StyledContent
    $isActive={false}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={false}
      $isCompleted={false}
    />
    <StyledContentDescription />
  </StyledContent>
</StyledNumberStep>
`;

exports[`NumberedStep applies title prop correctly 1`] = `
<StyledNumberStep
  $isActive={false}
  $isCompleted={false}
>
  <StyledNumberIcon
    $isActive={false}
    $isCompleted={false}
  >
    <span />
  </StyledNumberIcon>
  <StyledNumberContentTail
    $isActive={false}
    $isCompleted={false}
  />
  <StyledContent
    $isActive={false}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={false}
      $isCompleted={false}
    >
      Test Title
    </StyledContentTitle>
    <StyledContentDescription />
  </StyledContent>
</StyledNumberStep>
`;

exports[`NumberedStep renders children correctly if isActive is provided 1`] = `
<StyledNumberStep
  $isActive={true}
  $isCompleted={false}
>
  <StyledNumberIcon
    $isActive={true}
    $isCompleted={false}
  >
    <span />
  </StyledNumberIcon>
  <StyledNumberContentTail
    $isActive={true}
    $isCompleted={false}
  />
  <StyledContent
    $isActive={true}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={true}
      $isCompleted={false}
    />
    <StyledContentDescription>
      Content
    </StyledContentDescription>
  </StyledContent>
</StyledNumberStep>
`;
